allprojects {
    group 'me.darknet'
    version '0.0.2-alpha'
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    repositories {
        mavenCentral()
        mavenLocal()
        maven { url 'https://jitpack.io' }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }

        withSourcesJar()
    }

    compileJava.options.encoding = "UTF-8"
    compileJava.options.incremental = true

    compileTestJava.options.encoding = "UTF-8"

    test {
        useJUnitPlatform()

        testLogging {
            events = ["passed", "skipped", "failed"]
            showStandardStreams = true
        }

        systemProperty 'junit.jupiter.execution.parallel.enabled', true
        systemProperty 'junit.jupiter.execution.parallel.mode.default', 'concurrent'

        jvmArgs "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
        jvmArgs "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
        jvmArgs "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
    }

    dependencies {
        // jetbrains annotations
        implementation 'org.jetbrains:annotations:22.0.0'

        // test dependencies
        testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    publishing {
        repositories {
            mavenLocal()
            maven {
                name = 'sources-repo'
                url = 'file:///tmp/sources-repo'
            }
        }
        publications {
            maven(MavenPublication) {
                from components.java
            }
        }
    }

    plugins.withType(JavaPlugin).configureEach {
        dependencies {
            testImplementation platform('org.junit:junit-bom:5.9.1')
            testImplementation 'org.junit.jupiter:junit-jupiter'
        }
    }
}
